# CameraGestures

./: .gitignore  CMakeLists.txt  PLAN_client_server_gesture_model.md  README.md  agents.md  build.sh  hand_gesture_recognition_solutions.rtf
ModelTraining/: Package.swift
ModelTraining/Sources/ModelTraining/: AppDelegate.swift  main.swift
ModelTraining/Sources/ModelTraining/Models/: DataCollectionManager.swift  GestureRecognizerWrapper.swift
ModelTraining/Sources/ModelTraining/Views/: CameraPreviewView.swift  CameraViewController.swift  DetailViewController.swift  MainViewController.swift  MainWindowController.swift  SidebarViewController.swift
cmake/: FindMediaPipe.cmake  MediaPipeConfig.cmake
iOS/: Podfile
iOS/GestureModel/: GestureModelModule.podspec  TRAINING_BACKEND_COMPARISON.md
iOS/GestureModel/GestureModel/GestureModel/: FeaturePreprocessor.swift  GestureModel.swift  MockData.swift  Types.swift
iOS/HandGestureRecognizing/: HandGestureRecognizingFramework.podspec
iOS/HandGestureRecognizing/HandGestureRecognizing/HandGestureRecognizing/: HandGestureRecognizing.swift  Types.swift
iOS/HandGestureTypes/: HandGestureTypes.podspec
iOS/HandGestureTypes/HandGestureTypes/: GestureRegistry.swift  Types.swift
iOS/HandsRecognizing/: HandsRecognizingModule.podspec
iOS/HandsRecognizing/HandsRecognizing/HandsRecognizing/: HandsRecognizing.swift  MockData.swift  Types.swift
iOS/ModelTraining/ModelTraining/ModelTraining/: ModelTrainingApp.swift
iOS/ModelTraining/ModelTraining/ModelTraining/Networking/: GestureModelAPIClient.swift
iOS/ModelTraining/ModelTraining/ModelTraining/Views/: CameraView.swift  ContentView.swift  GestureListView.swift  HandFilmsView.swift  SettingsView.swift  TrainingView.swift
include/CameraGestures/Common/: Types.h
include/CameraGestures/GestureModel/: GestureModel.h
include/CameraGestures/HandGestureRecognizing/: CameraGestureAPI.h  HandGestureRecognizing.h
include/CameraGestures/HandsRecognizing/: HandsRecognizing.h
scripts/: build-android.sh  build-ios.sh  build-macos.sh  setup_mediapipe_macos.sh
src/GestureModel/: CMakeLists.txt  GestureModel.cpp
src/HandGestureRecognizing/: CMakeLists.txt  CameraGestureAPI.cpp  HandGestureRecognizing.cpp
src/HandsRecognizing/: CMakeLists.txt  HandsRecognizing.cpp  MediaPipeHandTracker.cpp  MediaPipeHandTracker.h
